bynkc/tests/fixtures/positive/387_is_typed_nested_variant/src/typed_nested.bynk
context typed_nested

type Fault =
  | NotFound
  | Denied(reason: String)

-- A nested `is` over a typed `Result[_, Fault]`: the pattern tests the outer
-- `Err` tag AND the inner `Denied` tag (#710). The typed scrutinee resolves the
-- payload accessor (`.error`) and validates the nested variant at compile time.
fn describe(r: Result[Int, Fault]) -> String {
  if r is Err(Denied(_)) {
    "denied"
  } else if r is Ok(_) {
    "ok"
  } else {
    "other"
  }
}
