bynkc/tests/fixtures/negative/387_is_nested_unknown_variant/src/typed_nested.bynk
context typed_nested

type Fault =
  | NotFound
  | Denied(reason: String)

-- A mistyped nested variant (`Typo` is not a `Fault`) over a typed scrutinee is
-- a compile error, not a silently never-matching branch (#710).
fn describe(r: Result[Int, Fault]) -> String {
  if r is Err(Typo(_)) { "x" } else { "y" }
}
